--- a/Site Modelo/index.html
+++ b/Site Modelo/index.html
@@ -98,7 +98,8 @@
             </div>
 
             <div id="banner">
-                <img src="src/images/hero1.png" alt="">
+                <p id="text-banner">Acesse também o nosso <span style="color: #f73bfa;">Instagram!</span></p>
+                <img src="src/images/frame-iphone.png" alt="">
             </div>
         </section>
 
