Atualização Feito pra tu

--- a/Site Modelo/index.html
+++ b/Site Modelo/index.html
@@ -98,8 +98,14 @@
             </div>
 
             <div id="banner">
-                <p id="text-banner">Acesse também o nosso <span style="color: #f73bfa;">Instagram!</span></p>
-                <img src="src/images/frame-iphone.png" alt="">
+                <p id="text-banner">Acesse também o nosso <span style="color: #f73bfa;"><a id="link-insta" href="https://www.instagram.com/feitopratu_">Instagram!</a></span></p>
+                <div>
+                    <iframe name="tela" id="tela" src="instagram.html" frameborder="0"></iframe>
+                </div>
+                <div>
+                    <img src="src/images/frame-iphone.png" alt="iphone">
+                </div>
+                
             </div>
         </section>
 
