--- a/Site Modelo/index.html
+++ b/Site Modelo/index.html
@@ -113,23 +113,23 @@
             <h2 class="section-title">Produtos</h2>
             <h3 class="section-subtitle">Nossos itens especiais</h3>
 
-            <div id="dishes">
-                <div class="dish">
-                    <div class="dish-heart">
+            <div id="produtos">
+                <div class="produto">
+                    <div class="produto-heart">
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/images/dish.png" class="dish-image" alt="">
+                    <img src="src/images/dish.png" class="produto-image" alt="">
 
-                    <h3 class="dish-title">
+                    <h3 class="produto-title">
                         Bonequinha
                     </h3>
 
-                    <span class="dish-description">
+                    <span class="produto-description">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </span>
 
-                    <div class="dish-rate">
+                    <div class="produto-rate">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -138,7 +138,7 @@
                         <span>(500+)</span>
                     </div>
 
-                    <div class="dish-price">
+                    <div class="produto-price">
                         <h4>R$200,00</h4>
                         <button class="btn-default">
                             <i class="fa-solid fa-basket-shopping"></i>
@@ -146,22 +146,22 @@
                     </div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-heart">
+                <div class="produto">
+                    <div class="produto-heart">
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/images/dish2.png" class="dish-image" alt="">
+                    <img src="src/images/dish2.png" class="produto-image" alt="">
 
-                    <h3 class="dish-title">
+                    <h3 class="produto-title">
                         Hornet
                     </h3>
 
-                    <span class="dish-description">
+                    <span class="produto-description">
                         Personagem da famosa franquia de jogos Hollow Knight.
                     </span>
 
-                    <div class="dish-rate">
+                    <div class="produto-rate">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -170,7 +170,7 @@
                         <span>(500+)</span>
                     </div>
 
-                    <div class="dish-price">
+                    <div class="produto-price">
                         <h4>R$200,00</h4>
                         <button class="btn-default">
                             <i class="fa-solid fa-basket-shopping"></i>
@@ -178,22 +178,22 @@
                     </div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-heart">
+                <div class="produto">
+                    <div class="produto-heart">
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/images/dish3.png" class="dish-image" alt="">
+                    <img src="src/images/dish3.png" class="produto-image" alt="">
 
-                    <h3 class="dish-title">
+                    <h3 class="produto-title">
                         Super Mario
                     </h3>
 
-                    <span class="dish-description">
+                    <span class="produto-description">
                         Um dos mais icônicos e fofos personagens da cultura pop.
                     </span>
 
-                    <div class="dish-rate">
+                    <div class="produto-rate">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -202,7 +202,7 @@
                         <span>(500+)</span>
                     </div>
 
-                    <div class="dish-price">
+                    <div class="produto-price">
                         <h4>R$200,00</h4>
                         <button class="btn-default">
                             <i class="fa-solid fa-basket-shopping"></i>
@@ -210,22 +210,22 @@
                     </div>
                 </div>
 
-                <div class="dish">
-                    <div class="dish-heart">
+                <div class="produto">
+                    <div class="produto-heart">
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/images/dish4.png" class="dish-image" alt="">
+                    <img src="src/images/dish4.png" class="produto-image" alt="">
 
-                    <h3 class="dish-title">
+                    <h3 class="produto-title">
                         Nossa Senhora
                     </h3>
 
-                    <span class="dish-description">
+                    <span class="produto-description">
                         Nossa Senhora, Mãe de Deus - Não precisa dizer mais nada.
                     </span>
 
-                    <div class="dish-rate">
+                    <div class="produto-rate">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
@@ -234,7 +234,7 @@
                         <span>(500+)</span>
                     </div>
 
-                    <div class="dish-price">
+                    <div class="produto-price">
                         <h4>R$200,00</h4>
                         <button class="btn-default">
                             <i class="fa-solid fa-basket-shopping"></i>
