Mudança nas cores e fonte do título
Paleta de cores foi editada e fonte do título principal atualizada.

--- a/Site Modelo/index.html
+++ b/Site Modelo/index.html
@@ -8,6 +8,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="shortcut icon" href="src/images/icon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
     <title>Feito Pra Tu</title>
 </head>
 <body>
@@ -61,8 +64,8 @@
             <div class="shape"></div>
             <div id="cta">
                 <h1 class="title">
-                    Feito com carinho para 
-                    <span>você</span>!
+                    Feito com carinho pra 
+                    <span>tu</span>!
                 </h1>
 
                 <p class="description">
@@ -90,15 +93,11 @@
                     <a href="">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
-
-                    <a href="">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
                 </div>
             </div>
 
             <div id="banner">
-                <p id="text-banner">Acesse também o nosso <span style="color: #f73bfa;"><a id="link-insta" href="https://www.instagram.com/feitopratu_">Instagram!</a></span></p>
+                <p id="text-banner">Acesse também o nosso <a id="link-insta" href="https://www.instagram.com/feitopratu_"><span style="color: #9e532d;">Instagram!</a></span></p>
                 <div>
                     <iframe name="tela" id="tela" src="instagram.html" frameborder="0"></iframe>
                 </div>
@@ -321,10 +320,6 @@
 
                 <a href="">
                     <i class="fa-brands fa-instagram"></i>
-                </a>
-
-                <a href="">
-                    <i class="fa-brands fa-facebook"></i>
                 </a>
             </div>
         </div>
