--- a/Site Modelo/index.html
+++ b/Site Modelo/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav id="navbar">
             <img src="src/images/Logo-150.png" alt="Logo" id="logo">
-            <i class="fa-solid fa-heart" id="nav_logo"> feito pra tu</i>
+            <p class="fa-solid fa-heart" id="nav_logo"> feito pra tu</p>
 
             <ul id="nav_list">
                 <li class="nav-item active">
@@ -140,7 +140,7 @@
                     <div class="produto-price">
                         <h4>R$200,00</h4>
                         <button class="btn-default">
-                            <i class="fa-solid fa-basket-shopping"></i>
+                            <i class="fa-solid fa-cart-shopping"></i>
                         </button>
                     </div>
                 </div>
@@ -172,7 +172,7 @@
                     <div class="produto-price">
                         <h4>R$200,00</h4>
                         <button class="btn-default">
-                            <i class="fa-solid fa-basket-shopping"></i>
+                            <i class="fa-solid fa-cart-shopping"></i>
                         </button>
                     </div>
                 </div>
@@ -204,7 +204,7 @@
                     <div class="produto-price">
                         <h4>R$200,00</h4>
                         <button class="btn-default">
-                            <i class="fa-solid fa-basket-shopping"></i>
+                            <i class="fa-solid fa-cart-shopping"></i>
                         </button>
                     </div>
                 </div>
@@ -236,7 +236,7 @@
                     <div class="produto-price">
                         <h4>R$200,00</h4>
                         <button class="btn-default">
-                            <i class="fa-solid fa-basket-shopping"></i>
+                            <i class="fa-solid fa-cart-shopping"></i>
                         </button>
                     </div>
                 </div>
@@ -256,11 +256,11 @@
 
                 <div id="feedbacks">
                     <div class="feedback">
-                        <img src="src/images/avatar.png" class="feedback-avatar" alt="">
+                        <img src="src/images/Rani1.png" class="feedback-avatar" alt="">
 
                         <div class="feedback-content">
                             <p>
-                                Fulana de Tal
+                                Ranieri Dantas
                                 <span>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
@@ -270,18 +270,17 @@
                                 </span>
                             </p>
                             <p>
-                                "Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Repellat voluptatibus cumque dolor ea est quae alias necessitatibus"
+                                "Minha esposa me deu um amigurumi do Super Mario e fiquei impressionado com os detalhes. Trabalho impecável!"
                             </p>
                         </div>
                     </div>
 
                     <div class="feedback">
-                        <img src="src/images/avatar.png" class="feedback-avatar" alt="">
+                        <img src="src/images/Frank.png" class="feedback-avatar" alt="">
 
                         <div class="feedback-content">
                             <p>
-                                Fulana de Tal
+                                Franklin Barreto
                                 <span>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
@@ -291,8 +290,7 @@
                                 </span>
                             </p>
                             <p>
-                                "Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Repellat voluptatibus cumque dolor ea est quae alias necessitatibus"
+                                "Presenteei minha noiva com um amigurumi de Nossa Senhora. Ela se emocionou. É delicado, feito com muito carinho."
                             </p>
                         </div>
                     </div>
@@ -310,7 +308,7 @@
 
         <div id="footer_items">
             <span id="copyright">
-                &copy 2025 Rogério Leão
+                &copy 2025 by Franklin Barreto & Rogério Leão
             </span>
 
             <div class="social-media-buttons">
