--- a/Site Modelo/instagram.html
+++ b/Site Modelo/instagram.html
@@ -10,10 +10,15 @@
             padding: 0px;
         }
 
+        ::-webkit-scrollbar {
+            width: 0px;
+            height: 0px;
+        }
+
         body {
             width: 100vw;
             height: 100vh;
-            background: black url(./src/images/tela-instagram.jpeg) no-repeat top center;
+            background: black url(./src/images/tela-instagram1.png) no-repeat top center;
             background-size: cover;
         }
     </style>
