--- a/Site Modelo/index.html
+++ b/Site Modelo/index.html
@@ -251,7 +251,7 @@
                     Depoimentos
                 </h2>
                 <h3 class="section-subtitle">
-                    O que os clientes falam sobre nós
+                    O que os clientes <br>falam sobre nós!
                 </h3>
 
                 <div id="feedbacks">
@@ -260,7 +260,7 @@
 
                         <div class="feedback-content">
                             <p>
-                                Ranieri Dantas
+                                <span>Ranieri Dantas</span>
                                 <span>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
@@ -269,8 +269,8 @@
                                     <i class="fa-solid fa-star"></i>
                                 </span>
                             </p>
-                            <p>
-                                "Minha esposa me deu um amigurumi do Super Mario e fiquei impressionado com os detalhes. Trabalho impecável!"
+                            <p class="depoimentos">
+                                "Minha esposa me deu um amigurumi do Super Mario e fiquei impressionado com os detalhes. O trabalho de vocês é impecável!"
                             </p>
                         </div>
                     </div>
@@ -280,7 +280,7 @@
 
                         <div class="feedback-content">
                             <p>
-                                Franklin Barreto
+                                <span>Franklin Barreto</span>
                                 <span>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
@@ -289,7 +289,7 @@
                                     <i class="fa-solid fa-star"></i>
                                 </span>
                             </p>
-                            <p>
+                            <p class="depoimentos">
                                 "Presenteei minha noiva com um amigurumi de Nossa Senhora. Ela se emocionou. É delicado, feito com muito carinho."
                             </p>
                         </div>
