--- a/Site Modelo/instagram.html
+++ b/Site Modelo/instagram.html
@@ -4,26 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
-    <style>
-        * {
-            margin: 0px;
-            padding: 0px;
-        }
-
-        ::-webkit-scrollbar {
-            width: 0px;
-            height: 0px;
-        }
-
-        body {
-            width: 100vw;
-            height: 100vh;
-            background: black url(./src/images/tela-instagram1.png) no-repeat top center;
-            background-size: cover;
-        }
-    </style>
+    <link rel="stylesheet" href="src/styles/social.css">
 </head>
 <body>
-    
+    <img src="src/images/tela-instagram1.png" alt="Instagram">
 </body>
 </html>
