--- a/Site Modelo/index.html
+++ b/Site Modelo/index.html
@@ -77,16 +77,16 @@
                         Ver produtos
                     </a>
 
-                    <a href="tel:+55555555555" id="phone_button">
+                    <a href="https://wa.me/5584994213828?text=Olá,%20gostaria%20de%20mais%20informações" id="phone_button">
                         <button class="btn-default">
                             <i class="fa-solid fa-phone"></i>
                         </button>
-                        (84) 91234-5678
+                        (84) 99421-3828
                     </a>
                 </div>
 
                 <div class="social-media-buttons">
-                    <a href="">
+                    <a href="https://wa.me/5584994213828?text=Olá,%20gostaria%20de%20mais%20informações">
                         <i class="fa-brands fa-whatsapp"></i>
                     </a>
 
@@ -312,7 +312,7 @@
             </span>
 
             <div class="social-media-buttons">
-                <a href="">
+                <a href="https://wa.me/5584994213828?text=Olá,%20gostaria%20de%20mais%20informações">
                     <i class="fa-brands fa-whatsapp"></i>
                 </a>
 
