Link instagram e target blank para abrir em nova aba

--- a/Site Modelo/index.html
+++ b/Site Modelo/index.html
@@ -97,7 +97,7 @@
             </div>
 
             <div id="banner">
-                <p id="text-banner">Acesse também o nosso <a id="link-insta" href="https://www.instagram.com/feitopratu_"><span style="color: #9e532d;">Instagram!</a></span></p>
+                <p id="text-banner">Acesse também o nosso <a id="link-insta" href="https://www.instagram.com/feitopratu__" target="_blank"><span style="color: #9e532d;">Instagram!</a></span></p>
                 <div>
                     <iframe name="tela" id="tela" src="instagram.html" frameborder="0"></iframe>
                 </div>
