--- a/Site Modelo/index.html
+++ b/Site Modelo/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav id="navbar">
             <img src="src/images/Logo-150.png" alt="Logo" id="logo">
-            <p class="fa-solid fa-heart" id="nav_logo"> feito pra tu</p>
+            <p id="nav_logo"> feito pra tu</p>
 
             <ul id="nav_list">
                 <li class="nav-item active">
