--- a/Site Modelo/index.html
+++ b/Site Modelo/index.html
@@ -118,7 +118,7 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/images/dish.png" class="produto-image" alt="">
+                    <img src="src/images/amig.png" class="produto-image" alt="">
 
                     <h3 class="produto-title">
                         Bonequinha
@@ -150,7 +150,7 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/images/dish2.png" class="produto-image" alt="">
+                    <img src="src/images/amig2.png" class="produto-image" alt="">
 
                     <h3 class="produto-title">
                         Hornet
@@ -182,7 +182,7 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/images/dish3.png" class="produto-image" alt="">
+                    <img src="src/images/amig3.png" class="produto-image" alt="">
 
                     <h3 class="produto-title">
                         Super Mario
@@ -214,7 +214,7 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/images/dish4.png" class="produto-image" alt="">
+                    <img src="src/images/amig4.png" class="produto-image" alt="">
 
                     <h3 class="produto-title">
                         Nossa Senhora
@@ -244,7 +244,7 @@
         </section>
 
         <section id="testimonials">
-            <img src="src/images/chef.png" id="testimonial_chef" alt="">
+            <img src="src/images/big-logo.png" id="testimonial_chef" alt="Foto da logo">
 
             <div id="testimonials_content">
                 <h2 class="section-title">
